--- a/TODO.txt
+++ b/TODO.txt
@@ -4637,23 +4637,24 @@ Creature Alignemnt Chance table:
 
 
 
-Default Player Alignment: 0
+Default Player Reputation: 0
 -----------------------------------------------------------------------------------------------------------------
                                                Alignment Table
 -----------------------------------------------------------------------------------------------------------------
---- Alignment Score ---   Rating   ---     Hostility       ---     Title     ---  Shop Prices  --- Hire Level ---
+--- Reputation Score ---   Rating   ---     Hostility       ---     Title     ---  Shop Prices  --- Hire Level ---
 -----------------------------------------------------------------------------------------------------------------
----      -255       ---   Feared   ---   If recognized*    --- Feared by Man  ---   Won't Sell  ---      0     ---
----      -100*      ---   Murderer ---   If recognized*    ---   Man-Slayer   ---   Won't Sell  ---      0     ---
----       -50       ---   Enemy    ---   Attempt Capture   ---     Outlaw     ---   Won't Sell  ---      0     --- 
----        -1       ---   Wanted   ---   Attempt Capture   --- Human Criminal ---     2x Price  ---      0     ---
----         0       ---   Nuetral  ---  If commiting crime ---      None      ---   1.5x Price  ---      1     ---  
----        50       ---   Friend   ---      If Attacked    ---      None      ---  1.25x Price  ---      1     ---  
----       100       ---   Trusted  ---      If Attacked    ---   Human Ally   ---     1x Price  ---      2     --- 
----       150       ---   Guardian ---      If Attacked    ---      None      ---  0.75x Price  ---      3     ---
----       200       ---    Hero    ---      If Attacked    ---   Human Hero   ---   0.5x Price  ---      4     ---
----       255       ---   Legend   ---      If Attacked    ---  Human Legend  ---  0.25x Price  ---      4     ---
+---       -255       ---   Feared   ---   If recognized*    --- Feared by Man  ---   Won't Sell  ---      0     ---
+---       -100^      ---   Murderer ---   If recognized*    ---   Man-Slayer   ---   Won't Sell  ---      0     ---
+---        -50       ---   Enemy    ---   Attempt Capture   ---     Outlaw     ---   Won't Sell  ---      0     --- 
+---         -1       ---   Disliked ---  If commiting crime ---      None      ---     2x Price  ---      0     ---
+---          0       ---   Nuetral  ---  If commiting crime ---      None      ---   1.5x Price  ---      1     ---  
+---         50       ---   Friend   ---      If Attacked    ---      None      ---  1.25x Price  ---      1     ---  
+---        100       ---   Trusted  ---      If Attacked    ---   Human Ally   ---     1x Price  ---      2     --- 
+---        150       ---   Guardian ---      If Attacked    ---      None      ---  0.75x Price  ---      3     ---
+---        200       ---    Hero    ---      If Attacked    ---   Human Hero   ---   0.5x Price  ---      4     ---
+---        255       ---   Legend   ---      If Attacked    ---  Human Legend  ---  0.25x Price  ---      4     ---
 -----------------------------------------------------------------------------------------------------------------
+^to go beyond -99 Reputation, killing is required.
 *Creatures at level 0.125 or lower (or if they are 5 or more levels lower then you), will flee instead of attacking.
 **Creatures at level 1 or lower (or if they are 3 or more levels lower then you),  will flee instead of attacking.
 
@@ -4707,57 +4708,172 @@ Stone Sickle (25%)
 
 -- Dwarfs --
 
-Default Player Alignment: 0
+Default Player Reputation: 0
 ----------------------------------------------------------------------------------------------------------------------
                                                Alignment Table
 -----------------------------------------------------------------------------------------------------------------------
---- Alignment Score ---    Rating   ---      Hostility       ---        Title     ---  Shop Prices  --- Hire Level ---
+--- Reputation Score ---    Rating   ---      Hostility       ---        Title     ---  Shop Prices  --- Hire Level ---
 ----------------------------------------------------------------------------------------------------------------------
----      -255       --- Good as Orc ---   If recognized**   ---   Dwarf-Bane     ---   Won't Sell  ---      0     ---
----      -100*      --- Dwarfkiller ---   If recognized*    ---   Dwarf-Slayer   ---   Won't Sell  ---      0     ---
----       -50       ---   Enemy     ---   Attempt Capture   ---   Dwarven Enemy  ---   Won't Sell  ---      0     --- 
----        -1       ---   Wanted    ---   Attempt Capture   --- Dwarven Criminal ---     2x Price  ---      0     ---
----         0       ---   Nuetral   ---  If commiting crime ---      None        ---   1.5x Price  ---      0     ---  
----        50       ---   Friend    ---      If Attacked    ---      None        ---  1.25x Price  ---      1     ---  
----       100       ---   Clansman  ---      If Attacked    ---  Dwarf Clansman  ---     1x Price  ---      1     --- 
----       150       ---    Chief    ---      If Attacked    ---      None        ---  0.75x Price  ---      2     ---
----       200       ---    Hero     ---      If Attacked    ---   Dwarven Hero   ---   0.5x Price  ---      3     ---
----       255       ---   Legend    ---      If Attacked    ---  Dwarven Legend  ---  0.25x Price  ---      4     ---
+---      -255        --- Good as Orc ---   If recognized**   ---   Dwarf-Bane     ---   Won't Sell  ---      0     ---
+---      -100^       --- Dwarfkiller ---   If recognized*    ---   Dwarf-Slayer   ---   Won't Sell  ---      0     ---
+---       -50        ---   Enemy     ---   Attempt Capture   ---   Dwarven Enemy  ---   Won't Sell  ---      0     --- 
+---        -1        ---   Disliked  ---   Attempt Capture   ---      None        ---     2x Price  ---      0     ---
+---         0        ---   Neutral   ---  If commiting crime ---      None        ---   1.5x Price  ---      0     ---  
+---        50        ---   Friend    ---      If Attacked    ---      None        ---  1.25x Price  ---      1     ---  
+---       100        ---   Clansman  ---      If Attacked    ---  Dwarf Clansman  ---     1x Price  ---      1     --- 
+---       150        ---    Chief    ---      If Attacked    ---      None        ---  0.75x Price  ---      2     ---
+---       200        ---    Hero     ---      If Attacked    ---   Dwarven Hero   ---   0.5x Price  ---      3     ---
+---       255        ---   Legend    ---      If Attacked    ---  Dwarven Legend  ---  0.25x Price  ---      4     ---
 -----------------------------------------------------------------------------------------------------------------------
+^to go beyond -99 Reputation, killing is required.
 *Creatures at level 0.125 or lower (or if they are 5 or more levels lower then you), will flee instead of attacking.
 **Creatures at level 1 or lower (or if they are 3 or more levels lower then you),  will flee instead of attacking.
 
 -- Elves --
 
-Default Player Alignment: -25
-----------------------------------------------------------------------------------------------------------------------
+Default Player Reputation: -25
+---------------------------------------------------------------------------------------------------------------------------------
                                                Alignment Table
------------------------------------------------------------------------------------------------------------------------
---- Alignment Score ---    Rating   ---      Hostility       ---        Title     ---  Shop Prices  --- Hire Level ---
-----------------------------------------------------------------------------------------------------------------------
----      -255       ---   Enemy of Nature    ---   If recognized*     ---  Enemy of Nature  ---   Won't Sell  ---      0     ---
----      -100*      ---       Woodsbane      ---   If recognized*     ---    Elf-Slayer     ---   Won't Sell  ---      0     ---
----       -50       ---         Enemy        ---   Attempt Capture    ---   Elven Enemy     ---   Won't Sell  ---      0     --- 
----        -1       ---       Untrusted      ---   If commiting crime ---  Elven Criminal   ---     2x Price  ---      0     ---
----         0       ---        Nuetral       ---   If commiting crime ---      None         ---   1.5x Price  ---      0     ---  
----        50       ---        Friend        ---      If Attacked     ---      None         ---  1.25x Price  ---      0     ---  
----       100       ---       Clansman       ---      If Attacked     ---  Elven Clansman   ---     1x Price  ---      1     --- 
----       150       ---        Chief         ---      If Attacked     ---       None        ---  0.75x Price  ---      2     ---
----       200       ---         Hero         ---      If Attacked     ---   Elven Hero      ---   0.5x Price  ---      3     ---
----       255       ---        Legend        ---      If Attacked     ---  Elven Legend     ---  0.25x Price  ---      4     ---
------------------------------------------------------------------------------------------------------------------------
+---------------------------------------------------------------------------------------------------------------------------------
+--- Reputation Score ---        Rating        ---      Hostility       ---        Title      ---   Shop Prices --- Hire Level ---
+---------------------------------------------------------------------------------------------------------------------------------
+---      -255        ---   Enemy of Nature    ---   If recognized*     ---  Enemy of Nature  ---   Won't Sell  ---      0     ---
+---      -100^       ---       Woodsbane      ---   If recognized*     ---     Woodsbane     ---   Won't Sell  ---      0     ---
+---       -50        ---         Enemy        ---   Attempt Capture    ---   Elven Enemy     ---   Won't Sell  ---      0     --- 
+---        -1        ---       Untrusted      ---   If commiting crime ---      None         ---     2x Price  ---      0     ---
+---         0        ---        Nuetral       ---   If commiting crime ---      None         ---   1.5x Price  ---      0     ---  
+---        50        ---        Friend        ---      If Attacked     ---      None         ---  1.25x Price  ---      0     ---  
+---       100        ---      Woodsfolk       ---      If Attacked     ---  Elven Woodsfolk  ---     1x Price  ---      1     --- 
+---       150        ---       Artisan        ---      If Attacked     ---       None        ---  0.75x Price  ---      2     ---
+---       200        ---         Hero         ---      If Attacked     ---   Elven Hero      ---   0.5x Price  ---      3     ---
+---       255        ---        Legend        ---      If Attacked     ---  Elven Legend     ---  0.25x Price  ---      4     ---
+---------------------------------------------------------------------------------------------------------------------------------
+^to go beyond -99 Reputation, killing is required.
 *Creatures at level 0.125 or lower (or if they are 5 or more levels lower then you), will flee instead of attacking.
 **Creatures at level 1 or lower (or if they are 3 or more levels lower then you),  will flee instead of attacking.
 
 -- Halflings --
 
+Default Player Reputation: 50
+----------------------------------------------------------------------------------------------------
+                                               Alignment Table
+---------------------------------------------------------------------------------------------------------------------------------
+--- Reputation Score ---        Rating        ---      Hostility       ---        Title      ---   Shop Prices --- Hire Level ---
+---------------------------------------------------------------------------------------------------------------------------------
+---      -255        ---   Crueler then sin   ---   If recognized*     --- Hated by the kind ---   Won't Sell  ---      0     ---
+---      -100^       ---         Foul         ---   If recognized*     ---  Halfling-Slayer  ---   Won't Sell  ---      0     ---
+---       -50        ---         Enemy        ---   Attempt Capture    ---   Halfling Enemy  ---   Won't Sell  ---      0     --- 
+---        -1        ---        Disliked      ---  If commiting crime  ---      None         ---     2x Price  ---      0     ---
+---         0        ---        Nuetral       ---  If commiting crime  ---      None         ---   1.5x Price  ---      1     ---  
+---        50        ---        Friend        ---      If Attacked     ---      None         ---  1.25x Price  ---      1     ---  
+---       100        ---       Merryman       ---      If Attacked     --- Halfling Merryman ---     1x Price  ---      2     --- 
+---       150        ---      Braveheart      ---      If Attacked     ---       None        ---  0.75x Price  ---      3     ---
+---       200        ---         Hero         ---      If Attacked     ---   Halfling Hero   ---   0.5x Price  ---      3     ---
+---       255        ---        Legend        ---      If Attacked     ---  Halfling Legend  ---  0.25x Price  ---      4     ---
+---------------------------------------------------------------------------------------------------------------------------------
+^to go beyond -99 Reputation, killing is required.
+*Creatures at level 0.125 or lower (or if they are 5 or more levels lower then you), will flee instead of attacking.
+**Creatures at level 1 or lower (or if they are 3 or more levels lower then you),  will flee instead of attacking.
+
 -- Dragonborn --
+
+Default Player Reputation: 0
+----------------------------------------------------------------------------------------------------
+                                               Alignment Table
+---------------------------------------------------------------------------------------------------------------------------------------
+--- Reputation Score ---        Rating        ---      Hostility       ---        Title            ---   Shop Prices --- Hire Level ---
+---------------------------------------------------------------------------------------------------------------------------------------
+---      -255        ---       Clankiller     ---   If recognized*     ---     "Dragonsbane"       ---   Won't Sell  ---      0     ---
+---      -100^       ---       Dishonored     ---   If recognized*     ---    Dragonborn-Slayer    ---   Won't Sell  ---      0     ---
+---       -50        ---        Enemy         ---   If recognized.     --- Enemy of the Dragonborn ---   Won't Sell  ---      0     --- 
+---        -1        ---        Disliked      ---  If commiting crime  ---         None            ---     2x Price  ---      0     ---
+---         0        ---        Nuetral       ---  If commiting crime  ---         None            ---   1.5x Price  ---      1     ---  
+---        50        ---        Friend        ---      If Attacked     ---         None            ---  1.25x Price  ---      1     ---  
+---       100        ---       Clansman       ---      If Attacked     ---   Dragonborn Clansman   ---     1x Price  ---      2     --- 
+---       150        ---      Taskmaster      ---      If Attacked     ---       None              ---  0.75x Price  ---      2     ---
+---       200        ---         Hero         ---      If Attacked     ---   Dragonborn Hero       ---   0.5x Price  ---      3     ---
+---       255        ---        Legend        ---      If Attacked     ---   Dragonborn Legend     ---  0.25x Price  ---      4     ---
+---------------------------------------------------------------------------------------------------------------------------------------
+^to go beyond -99 Reputation, killing is required.
+*Creatures at level 0.125 or lower (or if they are 5 or more levels lower then you), will flee instead of attacking.
+**Creatures at level 1 or lower (or if they are 3 or more levels lower then you),  will flee instead of attacking.
+
 
 -- Gnomes --
 
+Default Player Reputation: 100
+---------------------------------------------------------------------------------------------------------------------------------------
+                                               Alignment Table
+---------------------------------------------------------------------------------------------------------------------------------------
+--- Reputation Score ---        Rating        ---      Hostility       ---        Title            ---   Shop Prices --- Hire Level ---
+---------------------------------------------------------------------------------------------------------------------------------------
+---      -255        ---        Monster       ---   If recognized*     ---     Trinket Taker       ---   Won't Sell  ---      0     ---
+---      -100^       ---      Hates Jokes     ---   If recognized*     ---      Gnome-Slayer       ---   Won't Sell  ---      0     ---
+---       -50        ---        Enemy         ---   Attempt Capture    ---      Gnome Enemy        ---   Won't Sell  ---      0     --- 
+---        -1        ---        Disliked      ---  If commiting crime  ---         None            ---     2x Price  ---      0     ---
+---         0        ---        Nuetral       ---  If commiting crime  ---         None            ---   1.5x Price  ---      1     ---  
+---        50        ---        Friend        ---      If Attacked     ---         None            ---  1.25x Price  ---      1     ---  
+---       100        ---     Close Friend     ---      If Attacked     ---         None            ---     1x Price  ---      2     --- 
+---       150        ---       Tinkerpal      ---      If Attacked     ---    Gnome Assistant      ---  0.75x Price  ---      2     ---
+---       200        ---         Hero         ---      If Attacked     ---      Gnome Hero         ---   0.5x Price  ---      3     ---
+---       255        ---        Legend        ---      If Attacked     ---      Gnome Legend       ---  0.25x Price  ---      4     ---
+---------------------------------------------------------------------------------------------------------------------------------------
+^to go beyond -99 Reputation, killing is required.
+*Creatures at level 0.125 or lower (or if they are 5 or more levels lower then you), will flee instead of attacking.
+**Creatures at level 1 or lower (or if they are 3 or more levels lower then you),  will flee instead of attacking.
+
+
 -- Half-Elfs --
 
+Default Player Reputation: 0
+---------------------------------------------------------------------------------------------------------------------------------------
+                                               Reputation Table
+---------------------------------------------------------------------------------------------------------------------------------------
+--- Reputation Score ---        Rating        ---  Attack player if:   ---        Title            ---   Shop Prices --- Hire Level ---
+---------------------------------------------------------------------------------------------------------------------------------------
+---      -255        ---        -----         ---   If recognized**    ---     Half-Breed Hater    ---   Won't Sell  ---      0     ---
+---      -100^       ---        -----         ---   If recognized*     ---      Half-Elf-Slayer    ---   Won't Sell  ---      0     ---
+---       -50        ---        Enemy         ---   If recognized      ---      Half-Elf Enemy     ---   Won't Sell  ---      0     --- 
+---        -1        ---        Disliked      ---  If commiting crime  ---         None            ---     2x Price  ---      0     ---
+---         0        ---        Nuetral       ---  If commiting crime  ---         None            ---   1.5x Price  ---      0     ---  
+---        50        ---        Friend        ---      If Attacked     ---         None            ---  1.25x Price  ---      1     ---  
+---       100        ---         Ally         ---      If Attacked     ---     Half-Elf Ally       ---     1x Price  ---      1     --- 
+---       150        ---       One of us      ---      If Attacked     ---         None            ---  0.75x Price  ---      2     ---
+---       200        ---         Hero         ---      If Attacked     ---     Half-Elf Hero       ---   0.5x Price  ---      3     ---
+---       255        ---        Legend        ---      If Attacked     ---     Half-Elf Legend     ---  0.25x Price  ---      4     ---
+---------------------------------------------------------------------------------------------------------------------------------------
+If your above -100 Reputaion, Hostiles will capture you instead of killing you outright.
+^to go beyond -99 Reputation, killing is required.
+*Creatures at level 0.125 or lower (or if they are 5 or more levels lower then you), will flee instead of attacking.
+**Creatures at level 1 or lower (or if they are 3 or more levels lower then you),  will flee instead of attacking.
+
+
+
 -- Half-Orcs --
+
+Default Player Reputation: 0
+---------------------------------------------------------------------------------------------------------------------------------------
+                                               Reputation Table
+---------------------------------------------------------------------------------------------------------------------------------------
+--- Reputation Score ---        Rating        ---  Attack player if:   ---        Title            ---   Shop Prices --- Hire Level ---
+---------------------------------------------------------------------------------------------------------------------------------------
+---      -255        ---        Monster       ---   If recognized**    ---     Half-Breed Hater    ---   Won't Sell  ---      0     ---
+---      -100^       ---      Hates Jokes     ---   If recognized*     ---      Half-Elf-Slayer    ---   Won't Sell  ---      0     ---
+---       -50        ---        Enemy         ---   If recognized      ---      Half-Elf Enemy     ---   Won't Sell  ---      0     --- 
+---        -1        ---        Disliked      ---  If commiting crime  ---         None            ---     2x Price  ---      0     ---
+---         0        ---        Nuetral       ---  If commiting crime  ---         None            ---   1.5x Price  ---      0     ---  
+---        50        ---        Friend        ---      If Attacked     ---         None            ---  1.25x Price  ---      1     ---  
+---       100        ---         Ally         ---      If Attacked     ---     Half-Elf Ally       ---     1x Price  ---      1     --- 
+---       150        ---       One of us      ---      If Attacked     ---         None            ---  0.75x Price  ---      2     ---
+---       200        ---         Hero         ---      If Attacked     ---     Half-Elf Hero       ---   0.5x Price  ---      3     ---
+---       255        ---        Legend        ---      If Attacked     ---     Half-Elf Legend     ---  0.25x Price  ---      4     ---
+---------------------------------------------------------------------------------------------------------------------------------------
+If your above -100 Reputaion, Hostiles will capture you instead of killing you outright.
+^to go beyond -99 Reputation, killing is required.
+*Creatures at level 0.125 or lower (or if they are 5 or more levels lower then you), will flee instead of attacking.
+**Creatures at level 1 or lower (or if they are 3 or more levels lower then you),  will flee instead of attacking.
+
+
 
 -- Tieflings --
 
